--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 h1 {
-    background: yellow;
+    background-color: yellow;
     color: blue;
     font-family: 'Courier New', Courier, monospace;
 }
